needs to be sorted by state

--- a/EV_Disparity_hopeyoungblood/EVDisparity_hopeyoungblood.ipynb
+++ b/EV_Disparity_hopeyoungblood/EVDisparity_hopeyoungblood.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "a4cb45dd",
    "metadata": {},
    "outputs": [],
@@ -20,12 +20,25 @@
     "\n",
     "c = Census(api_key, year=2019)\n",
     "\n",
-    "## \"0e395bcf9cca78932f9c8e80c0a8a55fe1cba723\""
+    "## \"0e395bcf9cca78932f9c8e80c0a8a55fe1cba723\"\n",
+    "\n",
+    "# STATE CODES:\n",
+    "# 04|AZ|Arizona|01779777\n",
+    "# 06|CA|California|01779778\n",
+    "# 08|CO|Colorado|01779779\n",
+    "# 16|ID|Idaho|01779783\n",
+    "# 30|MT|Montana|00767982\n",
+    "# 32|NV|Nevada|01779793\n",
+    "# 35|NM|New Mexico|00897535\n",
+    "# 41|OR|Oregon|01155107\n",
+    "# 49|UT|Utah|01455989\n",
+    "# 53|WA|Washington|01779804\n",
+    "# 56|WY|Wyoming|01779807\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "361cd788",
    "metadata": {
     "scrolled": true
@@ -164,7 +177,7 @@
        "4                        0.773167  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "40cb79a1",
    "metadata": {},
    "outputs": [],
