kristin's local changes

--- a/EVstationdata-Copy2.ipynb
+++ b/EVstationdata-Copy2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -5496,7 +5496,7 @@
       "            \"station_phone\": \"530-642-5383\",\n",
       "            \"status_code\": \"E\",\n",
       "            \"street_address\": \"Mosquito Rd & Clay St\",\n",
-      "            \"updated_at\": \"2021-03-11T23:22:17Z\",\n",
+      "            \"updated_at\": \"2021-07-30T12:24:29Z\",\n",
       "            \"zip\": \"95667\"\n",
       "        },\n",
       "        {\n",
@@ -6082,7 +6082,7 @@
       "            \"station_phone\": \"530-621-5300\",\n",
       "            \"status_code\": \"E\",\n",
       "            \"street_address\": \"2850 Fairlane Ct\",\n",
-      "            \"updated_at\": \"2021-03-11T23:22:17Z\",\n",
+      "            \"updated_at\": \"2021-07-30T12:24:29Z\",\n",
       "            \"zip\": \"95667\"\n",
       "        },\n",
       "        {\n",
@@ -6147,7 +6147,7 @@
       "            \"station_phone\": \"530-642-5383\",\n",
       "            \"status_code\": \"E\",\n",
       "            \"street_address\": \"4640 Post St\",\n",
-      "            \"updated_at\": \"2021-03-11T23:22:17Z\",\n",
+      "            \"updated_at\": \"2021-07-30T12:24:29Z\",\n",
       "            \"zip\": \"95762\"\n",
       "        },\n",
       "        {\n",
@@ -8505,7 +8505,7 @@
       "            \"cng_total_storage\": null,\n",
       "            \"cng_vehicle_class\": null,\n",
       "            \"country\": \"US\",\n",
-      "            \"date_last_confirmed\": \"2021-07-27\",\n",
+      "            \"date_last_confirmed\": \"2021-07-31\",\n",
       "            \"e85_blender_pump\": null,\n",
       "            \"e85_other_ethanol_blends\": null,\n",
       "            \"ev_connector_types\": [\n",
@@ -8559,7 +8559,7 @@
       "            \"station_phone\": \"888-758-4389\",\n",
       "            \"status_code\": \"E\",\n",
       "            \"street_address\": \"1226 SW 50th St\",\n",
-      "            \"updated_at\": \"2021-07-27T00:26:46Z\",\n",
+      "            \"updated_at\": \"2021-07-31T00:26:41Z\",\n",
       "            \"zip\": \"97367\"\n",
       "        },\n",
       "        {\n",
@@ -8709,7 +8709,7 @@
       "            \"cng_total_storage\": null,\n",
       "            \"cng_vehicle_class\": null,\n",
       "            \"country\": \"US\",\n",
-      "            \"date_last_confirmed\": \"2021-07-27\",\n",
+      "            \"date_last_confirmed\": \"2021-07-31\",\n",
       "            \"e85_blender_pump\": null,\n",
       "            \"e85_other_ethanol_blends\": null,\n",
       "            \"ev_connector_types\": [\n",
@@ -8763,7 +8763,7 @@
       "            \"station_phone\": \"888-758-4389\",\n",
       "            \"status_code\": \"E\",\n",
       "            \"street_address\": \"Ellingson Rd SW\",\n",
-      "            \"updated_at\": \"2021-07-27T00:26:46Z\",\n",
+      "            \"updated_at\": \"2021-07-31T00:26:41Z\",\n",
       "            \"zip\": \"97321\"\n",
       "        },\n",
       "        {\n",
@@ -8783,7 +8783,7 @@
       "            \"cng_total_storage\": null,\n",
       "            \"cng_vehicle_class\": null,\n",
       "            \"country\": \"US\",\n",
-      "            \"date_last_confirmed\": \"2021-07-27\",\n",
+      "            \"date_last_confirmed\": \"2021-07-31\",\n",
       "            \"e85_blender_pump\": null,\n",
       "            \"e85_other_ethanol_blends\": null,\n",
       "            \"ev_connector_types\": [\n",
@@ -8838,7 +8838,7 @@
       "            \"station_phone\": \"888-758-4389\",\n",
       "            \"status_code\": \"E\",\n",
       "            \"street_address\": \"1601 NE 15th St\",\n",
-      "            \"updated_at\": \"2021-07-27T00:26:46Z\",\n",
+      "            \"updated_at\": \"2021-07-31T00:26:41Z\",\n",
       "            \"zip\": \"97367\"\n",
       "        },\n",
       "        {\n",
@@ -9185,7 +9185,7 @@
       "            \"cng_total_storage\": null,\n",
       "            \"cng_vehicle_class\": null,\n",
       "            \"country\": \"US\",\n",
-      "            \"date_last_confirmed\": \"2021-07-27\",\n",
+      "            \"date_last_confirmed\": \"2021-07-31\",\n",
       "            \"e85_blender_pump\": null,\n",
       "            \"e85_other_ethanol_blends\": null,\n",
       "            \"ev_connector_types\": [\n",
@@ -9240,7 +9240,7 @@
       "            \"station_phone\": \"888-758-4389\",\n",
       "            \"status_code\": \"E\",\n",
       "            \"street_address\": \"9855 E Speedway Blvd\",\n",
-      "            \"updated_at\": \"2021-07-27T00:26:46Z\",\n",
+      "            \"updated_at\": \"2021-07-31T00:26:41Z\",\n",
       "            \"zip\": \"85748\"\n",
       "        },\n",
       "        {\n",
@@ -9391,7 +9391,7 @@
       "            \"cng_total_storage\": null,\n",
       "            \"cng_vehicle_class\": null,\n",
       "            \"country\": \"US\",\n",
-      "            \"date_last_confirmed\": \"2021-07-27\",\n",
+      "            \"date_last_confirmed\": \"2021-07-31\",\n",
       "            \"e85_blender_pump\": null,\n",
       "            \"e85_other_ethanol_blends\": null,\n",
       "            \"ev_connector_types\": [\n",
@@ -9445,7 +9445,7 @@
       "            \"station_phone\": \"888-758-4389\",\n",
       "            \"status_code\": \"E\",\n",
       "            \"street_address\": \"150 E Main St\",\n",
-      "            \"updated_at\": \"2021-07-27T00:26:46Z\",\n",
+      "            \"updated_at\": \"2021-07-31T00:26:41Z\",\n",
       "            \"zip\": \"97123\"\n",
       "        },\n",
       "        {\n",
@@ -9465,7 +9465,7 @@
       "            \"cng_total_storage\": null,\n",
       "            \"cng_vehicle_class\": null,\n",
       "            \"country\": \"US\",\n",
-      "            \"date_last_confirmed\": \"2021-07-27\",\n",
+      "            \"date_last_confirmed\": \"2021-07-31\",\n",
       "            \"e85_blender_pump\": null,\n",
       "            \"e85_other_ethanol_blends\": null,\n",
       "            \"ev_connector_types\": [\n",
@@ -9519,7 +9519,7 @@
       "            \"station_phone\": \"888-758-4389\",\n",
       "            \"status_code\": \"E\",\n",
       "            \"street_address\": \"253 SE 8th Ave\",\n",
-      "            \"updated_at\": \"2021-07-27T00:26:46Z\",\n",
+      "            \"updated_at\": \"2021-07-31T00:26:41Z\",\n",
       "            \"zip\": \"97123\"\n",
       "        },\n",
       "        {\n",
@@ -9539,7 +9539,7 @@
       "            \"cng_total_storage\": null,\n",
       "            \"cng_vehicle_class\": null,\n",
       "            \"country\": \"US\",\n",
-      "            \"date_last_confirmed\": \"2021-07-27\",\n",
+      "            \"date_last_confirmed\": \"2021-07-31\",\n",
       "            \"e85_blender_pump\": null,\n",
       "            \"e85_other_ethanol_blends\": null,\n",
       "            \"ev_connector_types\": [\n",
@@ -9593,7 +9593,7 @@
       "            \"station_phone\": \"888-758-4389\",\n",
       "            \"status_code\": \"E\",\n",
       "            \"street_address\": \"450 110th Ave NE\",\n",
-      "            \"updated_at\": \"2021-07-27T00:26:46Z\",\n",
+      "            \"updated_at\": \"2021-07-31T00:26:41Z\",\n",
       "            \"zip\": \"98004\"\n",
       "        },\n",
       "        {\n",
@@ -10005,7 +10005,7 @@
       "            \"cng_total_storage\": null,\n",
       "            \"cng_vehicle_class\": null,\n",
       "            \"country\": \"US\",\n",
-      "            \"date_last_confirmed\": \"2021-07-27\",\n",
+      "            \"date_last_confirmed\": \"2021-07-31\",\n",
       "            \"e85_blender_pump\": null,\n",
       "            \"e85_other_ethanol_blends\": null,\n",
       "            \"ev_connector_types\": [\n",
@@ -10059,7 +10059,7 @@
       "            \"station_phone\": \"888-758-4389\",\n",
       "            \"status_code\": \"E\",\n",
       "            \"street_address\": \"1755 Highlands Dr NE\",\n",
-      "            \"updated_at\": \"2021-07-27T00:26:46Z\",\n",
+      "            \"updated_at\": \"2021-07-31T00:26:41Z\",\n",
       "            \"zip\": \"98027\"\n",
       "        },\n",
       "        {\n",
@@ -10537,7 +10537,7 @@
       "            \"cng_total_storage\": null,\n",
       "            \"cng_vehicle_class\": null,\n",
       "            \"country\": \"US\",\n",
-      "            \"date_last_confirmed\": \"2021-07-27\",\n",
+      "            \"date_last_confirmed\": \"2021-07-31\",\n",
       "            \"e85_blender_pump\": null,\n",
       "            \"e85_other_ethanol_blends\": null,\n",
       "            \"ev_connector_types\": [\n",
@@ -10592,7 +10592,7 @@
       "            \"station_phone\": \"888-758-4389\",\n",
       "            \"status_code\": \"E\",\n",
       "            \"street_address\": \"400-498 3rd St NW\",\n",
-      "            \"updated_at\": \"2021-07-27T00:26:46Z\",\n",
+      "            \"updated_at\": \"2021-07-31T00:26:41Z\",\n",
       "            \"zip\": \"87102\"\n",
       "        },\n",
       "        {\n",
@@ -10612,7 +10612,7 @@
       "            \"cng_total_storage\": null,\n",
       "            \"cng_vehicle_class\": null,\n",
       "            \"country\": \"US\",\n",
-      "            \"date_last_confirmed\": \"2021-07-27\",\n",
+      "            \"date_last_confirmed\": \"2021-07-31\",\n",
       "            \"e85_blender_pump\": null,\n",
       "            \"e85_other_ethanol_blends\": null,\n",
       "            \"ev_connector_types\": [\n",
@@ -10666,7 +10666,7 @@
       "            \"station_phone\": \"888-758-4389\",\n",
       "            \"status_code\": \"E\",\n",
       "            \"street_address\": \"18500 Campus Way NE\",\n",
-      "            \"updated_at\": \"2021-07-27T00:26:46Z\",\n",
+      "            \"updated_at\": \"2021-07-31T00:26:41Z\",\n",
       "            \"zip\": \"98011\"\n",
       "        },\n",
       "        {\n",
@@ -10686,7 +10686,7 @@
       "            \"cng_total_storage\": null,\n",
       "            \"cng_vehicle_class\": null,\n",
       "            \"country\": \"US\",\n",
-      "            \"date_last_confirmed\": \"2021-07-27\",\n",
+      "            \"date_last_confirmed\": \"2021-07-31\",\n",
       "            \"e85_blender_pump\": null,\n",
       "            \"e85_other_ethanol_blends\": null,\n",
       "            \"ev_connector_types\": [\n",
@@ -10740,7 +10740,7 @@
       "            \"station_phone\": \"888-758-4389\",\n",
       "            \"status_code\": \"E\",\n",
       "            \"street_address\": \"15670 NE 85th St\",\n",
-      "            \"updated_at\": \"2021-07-27T00:26:46Z\",\n",
+      "            \"updated_at\": \"2021-07-31T00:26:41Z\",\n",
       "            \"zip\": \"98052\"\n",
       "        },\n",
       "        {\n",
@@ -10760,7 +10760,7 @@
       "            \"cng_total_storage\": null,\n",
       "            \"cng_vehicle_class\": null,\n",
       "            \"country\": \"US\",\n",
-      "            \"date_last_confirmed\": \"2021-07-27\",\n",
+      "            \"date_last_confirmed\": \"2021-07-31\",\n",
       "            \"e85_blender_pump\": null,\n",
       "            \"e85_other_ethanol_blends\": null,\n",
       "            \"ev_connector_types\": [\n",
@@ -10814,7 +10814,7 @@
       "            \"station_phone\": \"888-758-4389\",\n",
       "            \"status_code\": \"E\",\n",
       "            \"street_address\": \"18080 NE 76th St\",\n",
-      "            \"updated_at\": \"2021-07-27T00:26:46Z\",\n",
+      "            \"updated_at\": \"2021-07-31T00:26:41Z\",\n",
       "            \"zip\": \"98052\"\n",
       "        },\n",
       "        {\n",
@@ -10834,7 +10834,7 @@
       "            \"cng_total_storage\": null,\n",
       "            \"cng_vehicle_class\": null,\n",
       "            \"country\": \"US\",\n",
-      "            \"date_last_confirmed\": \"2021-07-27\",\n",
+      "            \"date_last_confirmed\": \"2021-07-31\",\n",
       "            \"e85_blender_pump\": null,\n",
       "            \"e85_other_ethanol_blends\": null,\n",
       "            \"ev_connector_types\": [\n",
@@ -10888,7 +10888,7 @@
       "            \"station_phone\": \"888-758-4389\",\n",
       "            \"status_code\": \"E\",\n",
       "            \"street_address\": \"14580 NE 145th St\",\n",
-      "            \"updated_at\": \"2021-07-27T00:26:46Z\",\n",
+      "            \"updated_at\": \"2021-07-31T00:26:41Z\",\n",
       "            \"zip\": \"98072\"\n",
       "        },\n",
       "        {\n",
@@ -13194,9 +13194,9 @@
       "            },\n",
       "            \"ELEC\": {\n",
       "                \"stations\": {\n",
-      "                    \"total\": 20081\n",
+      "                    \"total\": 20113\n",
       "                },\n",
-      "                \"total\": 54361\n",
+      "                \"total\": 54441\n",
       "            },\n",
       "            \"HY\": {\n",
       "                \"total\": 0\n",
@@ -13208,10 +13208,10 @@
       "                \"total\": 0\n",
       "            }\n",
       "        },\n",
-      "        \"total\": 54361\n",
+      "        \"total\": 54441\n",
       "    },\n",
       "    \"station_locator_url\": \"https://afdc.energy.gov/stations/\",\n",
-      "    \"total_results\": 20081\n",
+      "    \"total_results\": 20113\n",
       "}\n"
      ]
     }
@@ -13224,7 +13224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13248,137 +13248,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>state</th>\n",
-       "      <th>zip</th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>longitude</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>CA</td>\n",
-       "      <td>91352</td>\n",
-       "      <td>34.248319</td>\n",
-       "      <td>-118.387971</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>CA</td>\n",
-       "      <td>90024</td>\n",
-       "      <td>34.052542</td>\n",
-       "      <td>-118.448504</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>CA</td>\n",
-       "      <td>91770</td>\n",
-       "      <td>34.050745</td>\n",
-       "      <td>-118.081014</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>CA</td>\n",
-       "      <td>90015</td>\n",
-       "      <td>34.040539</td>\n",
-       "      <td>-118.271387</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>CA</td>\n",
-       "      <td>90012</td>\n",
-       "      <td>34.059133</td>\n",
-       "      <td>-118.248589</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>195</th>\n",
-       "      <td>AZ</td>\n",
-       "      <td>86404</td>\n",
-       "      <td>34.542170</td>\n",
-       "      <td>-114.352870</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>196</th>\n",
-       "      <td>AZ</td>\n",
-       "      <td>85206</td>\n",
-       "      <td>33.385361</td>\n",
-       "      <td>-111.695062</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>197</th>\n",
-       "      <td>AZ</td>\n",
-       "      <td>85201</td>\n",
-       "      <td>33.434313</td>\n",
-       "      <td>-111.872266</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>198</th>\n",
-       "      <td>AZ</td>\n",
-       "      <td>85382</td>\n",
-       "      <td>33.636921</td>\n",
-       "      <td>-112.253682</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>199</th>\n",
-       "      <td>AZ</td>\n",
-       "      <td>85014</td>\n",
-       "      <td>33.509862</td>\n",
-       "      <td>-112.054162</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>200 rows × 4 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "    state    zip   latitude   longitude\n",
-       "0      CA  91352  34.248319 -118.387971\n",
-       "1      CA  90024  34.052542 -118.448504\n",
-       "2      CA  91770  34.050745 -118.081014\n",
-       "3      CA  90015  34.040539 -118.271387\n",
-       "4      CA  90012  34.059133 -118.248589\n",
-       "..    ...    ...        ...         ...\n",
-       "195    AZ  86404  34.542170 -114.352870\n",
-       "196    AZ  85206  33.385361 -111.695062\n",
-       "197    AZ  85201  33.434313 -111.872266\n",
-       "198    AZ  85382  33.636921 -112.253682\n",
-       "199    AZ  85014  33.509862 -112.054162\n",
-       "\n",
-       "[200 rows x 4 columns]"
+       "200"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -13394,7 +13273,7 @@
     "                }\n",
     "\n",
     "EVstation_data = pd.DataFrame(EVstation_dict)\n",
-    "EVstation_data.head(200)"
+    "len(EVstation_data)"
    ]
   },
   {
